# YOLOv8-detection

./: .gitignore  README.md  gui_detector.py  pyproject.toml  run.py  run_image.py  train.py
resource/: classes.txt  data.yaml  notes.json
resource/labels/: train.cache  val.cache
resource/labels/train/: 0604af0e-A02_L3_T05_WRI_021.txt  06e85895-A02_L5_T03_STA_007.txt  08a28083-A02_L3_T06_WRI_001.txt  14447cb3-A02_L3_T06_WRI_007.txt  15159e6a-A02_L5_T03_STA_029.txt  16f7d697-A02_L2_T04_STA_010.txt  19c5d36c-2026-03-05_14-33-18_237.txt  1a95cecb-A02_L2_T03_STA_039.txt  23267334-2026-03-05_14-45-55_626.txt  2368be25-A02_L3_T05_WRI_027.txt  25a44756-1_breakage_026.txt  28737537-A02_L5_T03_STA_011.txt  313473c9-A02_L2_T03_STA_017.txt  326999b9-2026-03-05_14-46-32_071.txt  3499534c-2026-03-05_14-47-06_076.txt  356ff3c6-1_breakage_029.txt  35ce6a10-A02_L2_T04_STA_009.txt  387df33a-A02_L2_T03_STA_007.txt  3a2599a0-A02_L2_T03_STA_036.txt  3adb358a-A02_L2_T03_STA_009.txt  3fe8752e-1_breakage_022.txt  42f87cde-A02_L3_T05_WRI_040.txt  46417322-A02_L5_T03_STA_016.txt  51faddbd-A02_L3_T05_WRI_028.txt  5a268d6c-1_breakage_017.txt  5ba4f337-A02_L3_T05_WRI_014.txt  5d73ec7d-1_breakage_025.txt  5dc3f898-1_breakage_024.txt  60e651d7-A02_L5_T03_STA_015.txt  6196b5af-2026-03-05_14-28-38_694.txt  64ce9188-2026-03-05_14-46-25_655.txt  6704b075-A02_L5_T03_STA_025.txt  6c9e5208-A02_L2_T03_STA_005.txt  6ec92c3d-A02_L2_T04_STA_015.txt  (+155 more)
util/: classify.py  energy_grade_analyzer.py  ocr_energy_grade.py  rename_pic.py  rename_txt.py  split_dataset.py  universal_label_converter.py
(+175 files in other folders)
