[project]
name = "yolo-code"
version = "0.1.0"
description = "YOLO training and inference scripts"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.10.0",
    "ultralytics>=8.3.0",
]

[project.optional-dependencies]
cpu = [
    "torch==2.9.0+cpu",
    "torchvision==0.24.0+cpu",
    "torchaudio==2.9.0+cpu",
]
gpu = [
    "torch==2.9.0+cu126",
    "torchvision==0.24.0+cu126",
    "torchaudio==2.9.0+cu126",
]

[tool.uv]
package = false
index-url = "https://mirrors.cernet.edu.cn/pypi/web/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'gpu'" },
    { index = "pytorch-cu126", marker = "extra == 'gpu'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'gpu'" },
    { index = "pytorch-cu126", marker = "extra == 'gpu'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "extra == 'cpu' and extra != 'gpu'" },
    { index = "pytorch-cu126", marker = "extra == 'gpu'" },
]
